deployment/httpserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver-ingress
  namespace: httpserver
spec:
  rules:
    - host: niennienzz-httpserver.com
      http:
        paths:
          - backend:
              service:
                name: httpserver-service
                port:
                  number: 30100
