deployment/istio-specs.yaml

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpsserver
spec:
  gateways:
    - httpsserver
  hosts:
    - httpsserver.cncamp.io
  http:
    - match:
        - port: 443
      route:
        - destination:
            host: httpserver.default.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /health-check
      rewrite:
        uri: "/healthz"
      route:
        - destination:
            host: httpserver.default.svc.cluster.local
            port:
              number: 80

---

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpsserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - httpsserver.cncamp.io
      port:
        name: https-default
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cncamp-credential
